#@HEADER
#@HEADER


EXEEXT = .exe

noinst_PROGRAMS = NonlinAlgebraic Poisson1D Poisson2D Poisson3D Stokes2D \
Coupled1D Coupled2D RadDiff1D NoxAlgebraic Kepler NoxPoisson1D \
PoissonOnDisk OptPoisson1D Eikonal2D VorticityStokes2D \
Stokes1D Helmholtz1D VorticityNavierStokes2D ConstancyBug BesselTest2D \
AdvectionDiffusion2D FunctionalTest



NonlinAlgebraic_SOURCES = $(srcdir)/NonlinAlgebraic.cpp

NonlinAlgebraic_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

NonlinAlgebraic_CXXFLAGS = $(STD_FWK_INCLUDES)

NonlinAlgebraic_LDADD = $(STD_FWK_LIBS) 





Poisson1D_SOURCES = $(srcdir)/Poisson1D.cpp

Poisson1D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Poisson1D_CXXFLAGS = $(STD_FWK_INCLUDES)

Poisson1D_LDADD = $(STD_FWK_LIBS) 



OptPoisson1D_SOURCES = $(srcdir)/OptPoisson1D.cpp

OptPoisson1D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

OptPoisson1D_CXXFLAGS = $(STD_FWK_INCLUDES)

OptPoisson1D_LDADD = $(STD_FWK_LIBS) 





Poisson2D_SOURCES = $(srcdir)/Poisson2D.cpp

Poisson2D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Poisson2D_CXXFLAGS = $(STD_FWK_INCLUDES)

Poisson2D_LDADD = $(STD_FWK_LIBS) 




Poisson3D_SOURCES = $(srcdir)/Poisson3D.cpp

Poisson3D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Poisson3D_CXXFLAGS = $(STD_FWK_INCLUDES)

Poisson3D_LDADD = $(STD_FWK_LIBS) 







Stokes2D_SOURCES = $(srcdir)/Stokes2D.cpp

Stokes2D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Stokes2D_CXXFLAGS = $(STD_FWK_INCLUDES)

Stokes2D_LDADD = $(STD_FWK_LIBS) 





Stokes1D_SOURCES = $(srcdir)/Stokes1D.cpp

Stokes1D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Stokes1D_CXXFLAGS = $(STD_FWK_INCLUDES)

Stokes1D_LDADD = $(STD_FWK_LIBS) 






Coupled1D_SOURCES = $(srcdir)/Coupled1D.cpp

Coupled1D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Coupled1D_CXXFLAGS = $(STD_FWK_INCLUDES)

Coupled1D_LDADD = $(STD_FWK_LIBS) 




Coupled2D_SOURCES = $(srcdir)/Coupled2D.cpp

Coupled2D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Coupled2D_CXXFLAGS = $(STD_FWK_INCLUDES)

Coupled2D_LDADD = $(STD_FWK_LIBS) 


RadDiff1D_SOURCES = $(srcdir)/RadDiff1D.cpp

RadDiff1D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

RadDiff1D_CXXFLAGS = $(STD_FWK_INCLUDES)

RadDiff1D_LDADD = $(STD_FWK_LIBS) 





NoxAlgebraic_SOURCES = $(srcdir)/NoxAlgebraic.cpp

NoxAlgebraic_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

NoxAlgebraic_CXXFLAGS = $(STD_FWK_INCLUDES)

NoxAlgebraic_LDADD = $(STD_FWK_LIBS) 



NoxPoisson1D_SOURCES = $(srcdir)/NoxPoisson1D.cpp

NoxPoisson1D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

NoxPoisson1D_CXXFLAGS = $(STD_FWK_INCLUDES)

NoxPoisson1D_LDADD = $(STD_FWK_LIBS) 



Kepler_SOURCES = $(srcdir)/Kepler.cpp

Kepler_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Kepler_CXXFLAGS = $(STD_FWK_INCLUDES)

Kepler_LDADD = $(STD_FWK_LIBS) 

PoissonOnDisk_SOURCES = $(srcdir)/PoissonOnDisk.cpp

PoissonOnDisk_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

PoissonOnDisk_CXXFLAGS = $(STD_FWK_INCLUDES)

PoissonOnDisk_LDADD = $(STD_FWK_LIBS) 










Eikonal2D_SOURCES = $(srcdir)/Eikonal2D.cpp $(srcdir)/bessi0.f

Eikonal2D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Eikonal2D_CXXFLAGS = $(STD_FWK_INCLUDES)

Eikonal2D_LDADD = $(STD_FWK_LIBS) 









#TCATA1D_SOURCES = $(srcdir)/TCATA1D.cpp
#
#TCATA1D_DEPENDENCIES = \
#$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
#$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
#$(top_builddir)/src-core/libsundanceCore.a \
#$(top_builddir)/src-utils/libsundanceUtils.a
#
#TCATA1D_CXXFLAGS = $(STD_FWK_INCLUDES)
#
#TCATA1D_LDADD = $(STD_FWK_LIBS) 










VorticityStokes2D_SOURCES = $(srcdir)/VorticityStokes2D.cpp

VorticityStokes2D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

VorticityStokes2D_CXXFLAGS = $(STD_FWK_INCLUDES)

VorticityStokes2D_LDADD = $(STD_FWK_LIBS) 











Helmholtz1D_SOURCES = $(srcdir)/Helmholtz1D.cpp

Helmholtz1D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

Helmholtz1D_CXXFLAGS = $(STD_FWK_INCLUDES)

Helmholtz1D_LDADD = $(STD_FWK_LIBS) 










VorticityNavierStokes2D_SOURCES = $(srcdir)/VorticityNavierStokes2D.cpp

VorticityNavierStokes2D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

VorticityNavierStokes2D_CXXFLAGS = $(STD_FWK_INCLUDES)

VorticityNavierStokes2D_LDADD = $(STD_FWK_LIBS) 



ConstancyBug_SOURCES = $(srcdir)/ConstancyBug.cpp

ConstancyBug_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

ConstancyBug_CXXFLAGS = $(STD_FWK_INCLUDES)

ConstancyBug_LDADD = $(STD_FWK_LIBS) 




BesselTest2D_SOURCES = $(srcdir)/BesselTest2D.cpp 

BesselTest2D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

BesselTest2D_CXXFLAGS = $(STD_FWK_INCLUDES)

BesselTest2D_LDADD = $(STD_FWK_LIBS) 



AdvectionDiffusion2D_SOURCES = $(srcdir)/AdvectionDiffusion2D.cpp 

AdvectionDiffusion2D_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

AdvectionDiffusion2D_CXXFLAGS = $(STD_FWK_INCLUDES)

AdvectionDiffusion2D_LDADD = $(STD_FWK_LIBS) 


FunctionalTest_SOURCES = $(srcdir)/FunctionalTest.cpp 

FunctionalTest_DEPENDENCIES = \
$(top_builddir)/src-std-framework/libsundanceStdFwk.a \
$(top_builddir)/src-std-mesh/libsundanceStdMesh.a \
$(top_builddir)/src-core/libsundanceCore.a \
$(top_builddir)/src-utils/libsundanceUtils.a

FunctionalTest_CXXFLAGS = $(STD_FWK_INCLUDES)

FunctionalTest_LDADD = $(STD_FWK_LIBS) 


TESTS = $(noinst_PROGRAMS:%.exe=%.tst)

%.tst : %.exe
	./$< > $@ 2>&1 
	echo "done" $@

tests:
	$(MAKE) $(TESTS)
	$(top_srcdir)/etc/checkTests.pl $(TESTS)

include $(top_srcdir)/Makefile.common
